syntax = "proto3";

package proto;

service CryptoWatch {
    rpc RequestPrice(stream AlertReq) returns (stream AlertRes);
    rpc IsExchangeSupported(Exchange) returns(Exchange);
}

message Exchange {
    string Name = 1;
    bool supported = 2;
}

message AlertReq {
    int32 id = 1;
    string ExchangeName = 2;
    Req req = 3;
}

message AlertRes {
    AlertReq req = 1;
    float price = 2;
    string message = 3;
}

message Req {
    string symbol = 1;
    int32 action = 2;
    float price = 3;
}